--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,2 @@
-chrome/copy-to-clipboard.png
-chrome/opt-common.css
-chrome/options.html
-chrome/popup.css
-chrome/popup.html
-
-firefox/copy-to-clipboard.png
-firefox/opt-common.css
-firefox/options.html
-firefox/popup.css
-firefox/popup.html
-
+build/
 web-ext-artifacts/
